now doing request mapping now honours versions too
Signed-off-by: Keith Wall <kwall@apache.org>